Fixes buttons alignment (+1 squashed commits)
Squashed commits:

[f8966ce] Fixes buttons alignment

--- a/app/styles/_searchBoxInternal.scss
+++ b/app/styles/_searchBoxInternal.scss
@@ -24,7 +24,6 @@
       .icon-evt_close {
          font-size: 14px;
          font-weight: bold;
-         top: 4px;
          left: 4px;
       }
       &.buttonSwitch-active {
